# the-internet-tests

./: .gitignore  Pipfile  README.md  clear_reports.sh  helpers.py  pyproject.toml  requirements.txt  run.py  serve_report.sh
pages/: basic_auth.py  file_upload.py  hovers.py
pages/github/: explore_tab.py  general.py  pages_resource.py
tests/: basic_auth.py  conftest.py  file_upload.py  hovers.py  test_basic_auth.py  test_file_upload.py  test_github.py  test_hovers.py
